--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,3 +3,21 @@
 @tailwind components;
 
 @tailwind utilities;
+html {
+    font-family: system-ui, sans-serif;
+    font-size: 1.25rem;
+  }
+  
+  body {
+    margin: 0;
+  }
+  
+  svg {
+    display: inline-block;
+    vertical-align: middle;
+  }
+  
+  .App {
+    font-family: sans-serif;
+    text-align: center;
+  }
